--- a/bfl.config
+++ b/bfl.config
@@ -1,3 +1,6 @@
+[settings]
+rebuild_json_every=1 second
+
 [paths]
 root=/home/don/code/theraccoonshare.com/public_html/medac/
 video=/home/don/Desktop/Video
