fixing cfg ignores

--- a/medac/example.config.json
+++ b/medac/example.config.json
@@ -11,12 +11,17 @@
   },
 
   "settings": {
-    "rebuild_json_every": "30 seconds"
+    "rebuild_json_every": "30 seconds",
+    "cache": {
+      "TV": {
+				"stale_after": "2 weeks"
+      }
+    }
   },
     
   "paths": { 
-    "root": "/var/www",
-    "video": "/home/username/Video",
+    "root": "/Users/don/Public/Subversion/theraccoonshare.com/public_html/medac-dev",
+    "video": "/Users/don/Desktop/Video/TV",
     "json": "media",
     "thumbs": "media/thumbs"
   },
