fixing cfg ignores

--- a/medac/example.config.json
+++ b/medac/example.config.json
@@ -13,6 +13,7 @@
   "settings": {
     "rebuild_json_every": "30 seconds",
     "cache": {
+			"stale_after": "2 weeks",
       "TV": {
 				"stale_after": "2 weeks"
       }
